--- a/index.html
+++ b/index.html
@@ -275,7 +275,7 @@
 
   <script src="js/main.js"></script>
   <script src="js/const.js"></script>
-  <script src="js/var.js"></script>
+  <script src="js/config.js"></script>
   <script src="js/pinMain.js"></script>
   <script src="js/map.js"></script>
   <script src="js/offers.js"></script>
