--- a/index.html
+++ b/index.html
@@ -274,6 +274,7 @@
   </template>
 
   <script src="js/main.js"></script>
+  <script src="js/similarOffer.js"></script>
   <script src="js/offers.js"></script>
   <script src="js/backend.js"></script>
   <script src="js/const.js"></script>
