--- a/index.html
+++ b/index.html
@@ -196,7 +196,9 @@
               <input type="file" id="images" name="images" class="ad-form__input visually-hidden" accept="image/png, image/jpeg">
               <label for="images" class="ad-form__drop-zone">Загрузить<br>фото...</label>
             </div>
-            <div class="ad-form__photo"></div>
+            <div class="ad-form__photo">
+              <img src="img/muffin-grey.svg" alt="Фото жилья пользователя" width="70" height="70">
+            </div>
           </div>
         </fieldset>
         <fieldset class="ad-form__element ad-form__element--submit">
@@ -273,11 +275,12 @@
     </div>
   </template>
 
+  <script src="js/const.js"></script>
   <script src="js/main.js"></script>
   <script src="js/similarOffer.js"></script>
   <script src="js/offers.js"></script>
   <script src="js/backend.js"></script>
-  <script src="js/const.js"></script>
+  <script src="js/photo.js"></script>
   <script src="js/config.js"></script>
   <script src="js/pinMain.js"></script>
   <script src="js/map.js"></script>
